--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
-    "express-session": "^1.17.1",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.0",
